[tool.poetry]
name = "bogatyrev-assignment"
version = "0.1.0"
description = "This is my assignment task for DB interview"
authors = ["Iaroslav Bogatyrev <iaroslav.bogatyrev@adastra.one>"]
readme = "README.md"
packages = [{include = "bogatyrev_assignment"}]

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.9.0"
pytest = "^7.3.1"
autopep8 = "^2.0.2"
flake8 = "^6.0.0"
webdriver-manager = "^3.8.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
